[package]
authors = ["Henk Dieter Oordt <henkdieter@oordt.net>"]
edition = "2018"
readme = "README.md"
name = "stm32f103-sx1261-minimal"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
cortex-m-semihosting = "0.3.5"
nb = "0.1.2"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["stm32f103", "rt", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f103-sx1261-minimal"
test = false
bench = false

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
